--- a/hellfire_shotguns.html
+++ b/hellfire_shotguns.html
@@ -5,24 +5,12 @@
 
     <meta charset="utf-8">
 
-    <title> ✧THE TOME✧ </title>
+    <title> ANGEL OF DEATH </title>
 
   </head>
 
   <body>
-    <header>
-    <nav>
-      <a href="index.html"><sub>HOME</sub></a>
-        ☽
-      <a href="about.html"><sup>ABOUT</sup></a>
-        ☽
-      <a href="dawn.html"><sub>DAWN</sub></a>
-        ☽
-    </nav>
 
-
-
-    </header>
 
     <section>
       <!--Embedding a gif. Just put it in an <img> if using
@@ -34,10 +22,22 @@
       allowfullscreen></iframe>
 
         <h1>  </h1>
-        <p> <b> THE TOME </b> is
+        <p>
+
         </p>
 
     </section>
+
+    <header>
+    <nav>
+      <a href="the_reaper.html"><sub>REAPER</sub></a>
+        💀
+      <a href="hellfire_shotguns.html"><sup>HELLFIRE SHOTGUNS</sup></a>
+        💀
+      <a href="shadow_step.html"><sub>SHADOW STEP</sub></a>
+        💀
+    </nav>
+    </header>
 
 <footer>A Medina &copy; 2017  </footer>
 
