--- a/shadow_step.html
+++ b/shadow_step.html
@@ -5,21 +5,18 @@
 
     <meta charset="utf-8">
 
-    <title> ✧THE TOME✧ </title>
+    <title> ANGEL OF DEATH </title>
 
     </head>
 
   <body>
-    <header>
-    <nav>
-      <a href="index.html"><sub>HOME</sub></a>
-        ☽
-      <a href="about.html"><sub>ABOUT</sub></a>
-        ☽
-      <a href="content.html"><sup>DAWN</sup></a>
-        ☽
-    </nav>
-    </header>
+      "I'm back in black"
+      <!-- AC/DC BACK IN BLACK-->
+
+      "This... is my curse"
+      <!-- Killswitch Engage MY CURSE -->
+
+
     <section>
         <!--Embedding a website -->
         <iframe src="https://media.tenor.com/images/452798928ec9f1e9755f8d9952dd8ea6/tenor.gif"
@@ -31,8 +28,19 @@
         src="https://www.youtube.com/embed/Bwb5D-ILhAQ"
         frameborder="0" allowfullscreen></iframe>
 
-        <a href="afternoon.html">PROCEED</a>
+        <a href="the_reaping.html">avanzar</a>
     </section>
+
+    <header>
+    <nav>
+      <a href="the_reaper.html"><sub>REAPER</sub></a>
+        💀
+      <a href="hellfire_shotguns.html"><sub>HELLFIRE SHOTGUNS</sub></a>
+        💀
+      <a href="shadow_step.html"><sup>SHADOW STEP</sup></a>
+        💀
+    </nav>
+    </header>
 
 <footer>A Medina &copy; 2017  </footer>
 
